# nixos-config

./: .envrc  .gitignore  LICENSE  README.md  README.org  flake.nix  shell.nix  starship.toml
config/bspwm/: bspwmrc  external_rules.sh
config/doom/: config.el  init.el
config/flameshot/: flameshot.ini
config/herbstluftwm/: autostart
config/mbsync/: mbsyncrc
config/nvim/: init.lua
config/polybar/: config.ini  launch.sh
config/qutebrowser/: config.py
config/rofi/: config.rasi
config/scripts/: confedit  config  configurations  exit  hub  kill  logout  man  menu  password  translate  websearch  wifi  youtube
config/sway/: add_workspace  rename_workspace  switch_workspace
config/sxhkd/: sxhkdrc
config/tridactyl/: tridactylrc
config/xmobar/: alternateved-xmobar.cabal  cabal.project  flake.nix  xmobar.hs
config/xmonad/: alternateved-xmonad.cabal  flake.nix  shell.nix  xmobar.hs  xmonad.hs
config/xmonad/scripts/: lock  logout
doom/: config.el  init.el
dunst/: dunstrc
ghc/: ghci.conf
herbstluftwm/: autostart.sh
home/: colors.nix  default.nix  home.nix  theme.nix
home/config/: starship.toml
home/config/xmonad/: alternateved-xmonad.cabal  build  flake.nix  old_xmonad.hs  shell.nix  xmobar.hs  xmobar_recompile.sh  xmonad.hs
home/modules/: alacritty.nix  colors.nix  dunst.nix  emacs.nix  (+12 more)
modules/: air.nix  default.nix  extended.nix  minimal.nix
nixpkgs/: home.nix
overlays/: anime-downloader.nix  default.nix
system/: configuration.nix  default.nix
xmobar/: build  xmobar.hs  xmobar_recompile.sh
xmonad/: #xmonad.hs#  xmonad.hs
(+141 files in other folders)
