cabal-version:      2.4
name:               alternateved-xmobar
version:            0.1.0.0

common common
  default-language:      Haskell2010
  ghc-options:
    -Wall
    -threaded

executable alternateved-xmobar
    import:           common
    main-is:          xmobar.hs
    build-depends:
        base,
        xmobar,
        xmonad-contrib,
        process
