cabal-version:      2.4
name:               alternateved-xmonad
version:            0.1.0.0

common common
  default-language:      Haskell2010
  default-extensions:
    LambdaCase
  ghc-options:
    -Wall

executable alternateved-xmonad
    import:           common
    main-is:          xmonad.hs
    build-depends:
        base,
        xmonad,
        xmonad-contrib,
        xmobar,
        X11,
        containers,
        utf8-string,
