cabal-version:      2.4
name:               alternateved-xmonad
version:            0.1.0.0
extra-source-files: CHANGELOG.md

executable alternateved-xmonad
    main-is:          xmonad.hs
    build-depends:
        base,
        xmonad,
        xmonad-contrib,
        xmobar,
        X11,
        containers,
        utf8-string,
    -- hs-source-dirs:
    default-language: Haskell2010
